# seiscat

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .sourcery.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  RELEASE_HEAD.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci-checks.yml  github-deploy.yml  publish-to-pypi.yml  release.yml  tests.yml
docs/: api.rst  commands.rst  conf.py  getting_started.rst  index.rst  installation.rst  requirements.txt  write_configfile.py
scripts/: install_seiscat_uv.ps1  install_seiscat_uv.sh
seiscat/: .ignore  __init__.py  _version.py  db.py  download_and_store.py  download_event_details.py  download_event_waveforms.py  editdb.py  export.py  fdsnws.py  feeddb.py  main.py  parse_arguments.py  plot.py  plot_map.py  plot_map_cartopy.py  plot_map_folium.py  plot_map_utils.py  print.py  run_command.py  utils.py
seiscat/conf/: configspec.conf
seiscat/config/: __init__.py  autocompletion.py  config.py  configspec.conf  parse_arguments.py
seiscat/daemon/: __init__.py  cycle.py  services.py
seiscat/database/: __init__.py  cropdb.py  data_types.py  dbfunctions.py  editdb.py  feeddb.py  get_set.py  transient_status.py
seiscat/download/: event_details.py  event_waveforms.py
seiscat/fetchdata/: event_details.py  event_waveforms.py  event_waveforms_utils.py  mass_downloader.py  sds.py
seiscat/plot/: plot_map.py  plot_map_cartopy.py  plot_map_folium.py  plot_map_plotly.py  plot_map_utils.py  plot_timeline.py  plot_timeline_matplotlib.py  plot_timeline_plotly.py  plot_timeline_terminal.py  plot_timeline_utils.py  plot_utils.py
seiscat/print/: __init__.py  pager.py  print_catalog.py
seiscat/scripts/: seiscat.py
seiscat/self/: __init__.py  commands.py  completion.py  install_detection.py  logo.py  status.py  update.py
seiscat/sources/: csv.py  evid.py  fdsnws.py  obspy_events.py
seiscat/utils/: __init__.py  conversion.py  exit.py  logo.py  print_logo.py  sample_script.py  write_ok.py
tests/: README.md  __init__.py  integration_fdsnws_waveforms.sh  test_config_paths.py  test_csv.py  test_daemon.py  test_daemon_parse.py  test_daemon_services.py  test_dbfunctions.py  test_editdb.py  test_fetch_event_details.py  test_get_set.py  test_main_daemon.py  test_obspy_events.py  test_pager_clipboard.py  test_plot_filtering.py  test_self_parse.py  test_self_status.py  test_self_update_policy.py  test_station_radius_max_mag.py  test_station_selection.py
