[build-system]
requires = ["setuptools>=64", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "seiscat"
dynamic = ["version", "readme"]
authors = [
    { name = "Claudio Satriano", email = "satriano@ipgp.fr" },
]
description = "Keep a local seismic catalog"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.7"
dependencies = [
    "obspy>=1.2.0",
    "argcomplete",
]

[project.license]
text = "GNU General Public License v3 or later (GPLv3+)"

[project.urls]
Homepage = "https://seiscat.seismicsource.org"
Source = "https://github.com/SeismicSource/seiscat"
Documentation = "https://seiscat.readthedocs.io"

[project.scripts]
seiscat = "seiscat.scripts.seiscat:main"

[tool.setuptools]
include-package-data = true
platforms = [
    "OS",
    "Independent",
]

[tool.setuptools.packages.find]
include = ["seiscat", "seiscat.*"]

[tool.setuptools.package-data]
"*" = ["LICENSE"]
"seiscat.conf" = ["*.conf"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "seiscat/_version.py"
versionfile_build = "seiscat/_version.py"
tag_prefix = "v"
parentdir_prefix = "seiscat-"

[tool.pylama]
skip = "build/*,*/_version.py,*/configobj/*"
