[build-system]
requires = ["setuptools>=77", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "seiscat"
dynamic = ["version", "readme"]
authors = [
    { name = "Claudio Satriano", email = "satriano@ipgp.fr" },
]
description = "Keep a local seismic catalog"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "obspy>=1.2.0",
    "argcomplete",
    "Pillow",
]

[project.urls]
Homepage = "https://seiscat.seismicsource.org"
Source = "https://github.com/SeismicSource/seiscat"
Documentation = "https://seiscat.readthedocs.io"

[project.scripts]
seiscat = "seiscat.main:main"

[tool.setuptools]
include-package-data = true
platforms = [
    "OS",
    "Independent",
]

[tool.setuptools.packages.find]
include = ["seiscat", "seiscat.*"]

[tool.setuptools.package-data]
"*" = ["LICENSE"]
"seiscat.config" = ["*.conf"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "seiscat/_version.py"
versionfile_build = "seiscat/_version.py"
tag_prefix = "v"
parentdir_prefix = "seiscat-"

[tool.pylama]
skip = "build/*,*/_version.py,*/configobj/*"
